--- a/BASICS/package.json
+++ b/BASICS/package.json
@@ -13,5 +13,8 @@
     "prettier": "2.5.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "node-fetch": "^3.2.0"
   }
 }
